MVP SCHEME API USER CRUD
